fix blog footer link overlaping the parent div

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -92,6 +92,9 @@ html{
         width: 50%;
         padding: 15px;
         text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         &:first-child {
           border-right: 1px solid #fff;
         }
